User Sign Up: completed

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,7 +13,7 @@
       <header class="jumbotron">
         <h1 class="display-4">Blocipedia</h1>
         <p class="lead">A place to create, collaborate and share wikis.</p>
-        <a href="#" class="btn btn-outline-primary btn-lg">Sign up</a>
+        <a href="/users/sign_up" class="btn btn-outline-primary btn-lg">Sign up</a>
       </header>
     </main>
 
