--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -11,6 +11,8 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/sign_up">Sign up</a>
       </ul>
     </div>
   </div>
