--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="background-color: #e3f2fd;">
   <div class="container">
     <a class="navbar-brand" href="#">Blocipedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,9 +10,18 @@
           <a class="nav-link" href="#">Home
             <span class="sr-only">(current)</span>
           </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_up">Sign up</a>
+        <% if(currentUser) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_out">Sign out</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_up">Sign up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_in">Sign in</a>
+          </li>
+        <% } %>
       </ul>
     </div>
   </div>
