--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -11,6 +11,10 @@
       <% include ../static/partials/navbar.ejs %>
 
       <h1>Wikis</h1>
+
+      <% if(currentUser) { %>
+        <a href="/wikis/new" class="btn btn-success">New Wiki</a>
+      <% } %>
       <ul class="list-group">
         <% wikis.forEach((wiki) => { %>
           <li class="list-group-item">
