--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -11,10 +11,12 @@
 
     <main class="container">
       <h1><%= wiki.title %></h1>
+      <% if(currentUser) { %>
         <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
         <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
+      <% } %>
       <p><%= wiki.body %></p>
     </main>
 
