--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="background-color: #e3f2fd;">
   <div class="container">
-    <a class="navbar-brand" href="#">Blocipedia</a>
+    <a class="navbar-brand" href="/">Blocipedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" href="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -18,6 +18,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
+          <% if (currentUser.role == 0) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/upgrade">Upgrade</a>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/downgrade">Downgrade</a>
+            </li>
+          <% } %>
         <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_up">Sign up</a>
