Upgrade an Account: completed

--- a/src/views/users/upgradeSuccess.ejs
+++ b/src/views/users/upgradeSuccess.ejs
@@ -10,6 +10,9 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+      <% include ../static/partials/messages.ejs %>
+
       <h1>Congratulations!</h1>
       <h3>You've successfully upgraded your account to a premium membership!</h3>
       <p>You can now create private wikis and add and remove collaborators from your private wikis.</p>
