--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -16,15 +16,18 @@
         </li>
         <% if(currentUser) { %>
           <li class="nav-item">
+            <a class="nav-link" href="users/<%= currentUser.id %>">Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
           <% if (currentUser.role == 0) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/users/upgrade">Upgrade</a>
+              <a class="nav-link" href="/users/<%= currentUser.id %>/upgradeForm">Upgrade</a>
             </li>
           <% } else { %>
             <li class="nav-item">
-              <a class="nav-link" href="/users/downgrade">Downgrade</a>
+              <a class="nav-link" href="/users/<%= currentUser.id %>/downgradeForm">Downgrade</a>
             </li>
           <% } %>
         <% } else { %>
