--- a/src/views/users/downgradeForm.ejs
+++ b/src/views/users/downgradeForm.ejs
@@ -10,12 +10,15 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
-      <h2>Downgrade your account to Standard (free).</h2>
+
+      <% include ../static/partials/messages.ejs %>
+
+      <h2>Downgrade your account to Standard (free)</h2>
       <p>With a standard account you will no longer have access to all the awesome
       features of a Premium account. This means your private wikis will be lost.
       Are you sure you want to downgrade?</p>
 
-      <form action="/users/downgrade" method="POST">
+      <form action="/users/<%= currentUser.id %>/downgrade" method="POST">
         <button type="submit" class="btn btn-danger">Downgrade</button>
       </form>
     </main>
