--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -20,6 +20,7 @@
           <label for="body">Body</label>
           <textarea rows="15" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
         </div>
+        <small class="muted-text">Editor is compatible with Markdown syntax.</small>
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
     </main>
