--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -16,37 +16,35 @@
         <a href="/wikis/new" class="btn btn-success">New Wiki</a>
       <% } %>
 
-      <% if(!currentUser || currentUser.role == 0) { %>
-        <ul class="list-group">
-          <% wikis.forEach((wiki) => { %>
-            <% if (wiki.private == false) { %>
-              <li class="list-group-item">
-                <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
-              </li>
-            <% } %>
-          <% }) %>
-        </ul>
-
-      <% } else if (currentUser.role == 1) { %>
-        <ul class="list-group">
-          <% wikis.forEach((wiki) => { %>
-            <% if (wiki.private == true && wiki.userId == currentUser.id || wiki.private == false) { %>
-              <li class="list-group-item">
-                <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
-              </li>
-            <% } %>
-          <% }) %>
-        </ul>
-
-      <% } else { %>
-        <ul class="list-group">
-          <% wikis.forEach((wiki) => { %>
+      <ul class="list-group">
+        <% wikis.forEach((wiki) => { %>
+          <% if (wiki.private == false) { %>
             <li class="list-group-item">
               <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
             </li>
-          <% }) %>
-        </ul>
-      <% } %>
+          <% } else if (currentUser) { %>
+            <% if (currentUser.role == 1) { %>
+              <% if (wiki.userId == currentUser.id) { %>
+                <li class="list-group-item">
+                  <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
+                </li>
+              <% } %>
+            <% } else if (currentUser.role == 2) { %>
+              <li class="list-group-item">
+                <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
+              </li>
+            <% } else { %>
+              <% wiki.collaborators.forEach((collaborator) => { %>
+                <% if (collaborator.username == currentUser.username) { %>
+                  <li class="list-group-item">
+                    <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
+                  </li>
+                <% } %>
+              <% }) %>
+            <% } %>
+          <% } %>
+        <% }) %>
+      </ul>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
