--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -10,14 +10,33 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+      <% include ../static/partials/messages.ejs %>
+
       <h1><%= wiki.title %></h1>
       <% if(currentUser) { %>
         <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
+        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="POST">
           <button type="submit" class="btn btn-danger">Delete</button>
         </form>
       <% } %>
-      <p><%- wiki.body %></p>
+      <div class="row">
+        <div class="col-8">
+          <p><%- wiki.body %></p>
+        </div>
+        <div class="col-4">
+          <% if (wiki.private == true && (wiki.userId == currentUser.id || currentUser.role == 2)) { %>
+            <h4>Collaborators</h4>
+            <ul class="list-group">
+              <% wiki.collaborators.forEach((collaborator) => { %>
+                <form style="display:initial" action="/wikis/<%= wiki.id %>/collaborators/<%= collaborator.id %>/destroy" method="POST">
+                  <li class="list-group-item"><%= collaborator.username %>
+                  <button type="submit" class="btn btn-danger">Remove</button>
+                  </li>
+                </form>
+              <% }) %>
+            </ul>
+          <% } %>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
