--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -11,7 +11,7 @@
 
     <main class="container">
       <header class="jumbotron">
-        <h1 class="display-4">Blocipedia</h1>
+        <h1 class="display-4">WikiShare</h1>
         <p class="lead">A place to create, collaborate and share wikis.</p>
         <a href="/users/sign_up" class="btn btn-outline-primary btn-lg">Sign up</a>
       </header>
