--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,16 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="background-color: #e3f2fd;">
   <div class="container">
-    <a class="navbar-brand" href="/">WikiShare</a>
+    <% if(!currentUser) { %>
+      <a class="navbar-brand" href="/">WikiShare</a>
+    <% } else { %>
+      <a class="navbar-brand" href="/wikis">WikiShare</a>
+    <% } %>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
+        <% if(!currentUser) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/wikis">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+        <% } %>
         <li class="nav-item">
           <a class="nav-link" href="/wikis">Wikis</a>
         </li>
