--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -14,13 +14,13 @@
       <form action="/wikis/create" method="post">
         <div class-"form-group">
           <label for="title">Wiki title</label>
-          <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
+          <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter title - must be at least 2 characters in length.">
         </div>
         <div class="form-group">
           <label class="form-group">
             <label for="body">Body</label>
-            <textarea rows="15" class="form-control" name="body" placeholder="Enter body"></textarea>
-            <small class="muted-text">Editor is compatible with Markdown syntax.</small>
+            <textarea rows="15" class="form-control" name="body" placeholder="Enter body - must be at least 10 characters in length."></textarea>
+            <small class="muted-text">Style with Markdown.</small>
         </div>
         <% if(currentUser.role == 1 || currentUser.role == 2) { %>
             <div class="custom-control custom-switch">
