--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -13,7 +13,7 @@
       <ul class="navbar-nav ml-auto">
         <% if(!currentUser) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/wikis">Home
+            <a class="nav-link" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
