--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -5,7 +5,7 @@
     <% include ../static/partials/head.ejs %>
 
   </head>
-  <body>
+  <body class="text-center">
 
     <% include ../static/partials/navbar.ejs %>
 
@@ -13,22 +13,27 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h1>Sign In</h1>
+      <div class="row justify-content-center">
+        <div class="col-align-self-center">
+          <form class="form-signin">
+            <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+            <div class="checkbox mb-3">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          </form>
+        </div>
+      </div>
 
-      <form action="/users/sign_in" method="POST">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form=control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-        </div>
-        <button type="submit" class="btn btn-outline-primary">Sign in</button>
-      </form>
     </main>
 
-    <% include ../static/partials/baseScripts.ejs %>
+        <% include ../static/partials/baseScripts.ejs %>
 
   </body>
 </html>
