--- a/src/views/users/upgradeForm.ejs
+++ b/src/views/users/upgradeForm.ejs
@@ -12,12 +12,14 @@
     <main class="container">
 
       <% include ../static/partials/messages.ejs %>
-
-      <h1>Upgrade to a Premium Membership</h1>
-      <div class="container-fluid">
-        <p>Upgrading to a premium membership let's you create private wikis, giving you complete
+      <div class="row">
+        <div class="col-9" id="form">
+          <h1>Upgrade to a Premium Membership</h1>
+          <p>Upgrading to a premium membership let's you create private wikis, giving you complete
           control over your wiki! You can keep it completely private or add and remove collaborators
           as you please.</p>
+        </div>
+        <div class="col-3 align-self-center">
           <form action="/users/<%= currentUser.id %>/upgrade" method ="POST">
             <script
               src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -29,8 +31,9 @@
               data-locale="auto">
             </script>
           </form>
+          <small class="muted-text">Premium memberships are charged a recurring payment of $15/month.</small>
+        </div>
       </div>
-    <small class="muted-text">Premium memberships are charged a recurring payment of $15/month.</small>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
