--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -13,18 +13,26 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h1><%= `${user.username}'s Profile` %></h1>
-      <p>Username: <%= currentUser.username %></p>
-      <p>Email: <%= currentUser.email %></p>
-      <% if (currentUser.role == 0) { %>
-        <p>You currently have a standard account. Upgrade to premium to unlock
-        some awesome features!</p>
-        <a href="/users/<%= currentUser.id %>/upgradeForm" class="btn btn-primary">Upgrade</a>
-      <% } else { %>
-        <p>You are currently signed up for the premium membership. Click here to
-        cancel.</p>
-        <a href="/users/<%= currentUser.id %>/downgradeForm" class="btn btn-danger">Downgrade</a>
-      <% } %>
+      <div class="row">
+        <h1><%= `${user.username}'s Profile` %></h1>
+      </div>
+      <div class="row">
+        <div class="col-3" id="profile-info">
+          <p>Username: <%= currentUser.username %></p>
+          <p>Email: <%= currentUser.email %></p>
+        </div>
+        <div class="col-9 text-center">
+          <% if (currentUser.role == 0) { %>
+            <p>You currently have a standard account. Upgrade to premium to unlock
+            some awesome features!</p>
+            <a href="/users/<%= currentUser.id %>/upgradeForm" class="btn btn-primary">Upgrade</a>
+          <% } else { %>
+            <p>You are currently signed up for the premium membership. Click here to
+            cancel.</p>
+            <a href="/users/<%= currentUser.id %>/downgradeForm" class="btn btn-danger">Downgrade</a>
+          <% } %>
+        </div>
+      </div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
