--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -15,18 +15,17 @@
 
       <div class="row justify-content-center">
         <div class="col-align-self-center">
-          <form class="form-signin">
-            <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-            <div class="checkbox mb-3">
-              <label>
-                <input type="checkbox" value="remember-me"> Remember me
-              </label>
+          <form class="form-signin" action="/users/sign_in" method="POST">
+            <h1>Sign In</h1>
+            <div class="sign-in-form">
+              <label for="email" class="sr-only">Email</label>
+              <input type="email" class="form-control" name="email" placeholder="Email" required="" autofocus="">
+              <label for="password" class="sr-only">Password</label>
+              <input type="password" class="form-control" name="password" placeholder="Password" required="">
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <div class="sign-in-button">
+              <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
+            </div>
           </form>
         </div>
       </div>
