--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -13,34 +13,33 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h2>Welcome to WikiShare</h2>
-
-         <div class="row">
-           <div class="col-md-8">
-             <form action="/users" method="POST">
-               <div class="form-group">
-                 <label>Username:</label>
-                 <input type="text" name="username" placeholder="Enter Username" class="form-control"/>
-                 <small class="text-muted" id="usernameHelp">Username must be at least 6 characters long</small>
-               </div>
-               <div class="form-group">
-                 <label>Email:</label>
-                 <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
-                 <small class="text-muted" id="emailHelp">Must be a valid email</small>
-               </div>
-               <div class="form-group">
-                 <label>Password:</label>
-                 <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
-                 <small class="text-muted" id="passwordHelp">Password must be at least 6 characters long and match confirmation below</small>
-               </div>
-               <div class="form-group">
-                 <label>Password:</label>
-                 <input type="password" name="password_conf" placeholder="Confirm Password" class="form-control"/>
-               </div><br/>
-               <input type="submit" value="Sign Up" class="btn btn-primary"/>
-             </form>
-           </div>
-         </div>
+      <div class="row justify-content-center">
+        <div class="col-align-self-center">
+          <form action="/users" method="POST">
+            <h1>Welcome to WikiShare</h1>
+            <div class="form-group">
+              <label>Username:</label>
+              <input type="text" name="username" placeholder="Enter Username" class="form-control"/>
+              <small class="text-muted" id="usernameHelp">Username must be at least 6 characters long</small>
+            </div>
+            <div class="form-group">
+              <label>Email:</label>
+              <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
+              <small class="text-muted" id="emailHelp">Must be a valid email</small>
+            </div>
+            <div class="form-group">
+              <label>Password:</label>
+              <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
+              <small class="text-muted" id="passwordHelp">Password must be at least 6 characters long and match confirmation below</small>
+            </div>
+            <div class="form-group">
+              <label>Password:</label>
+              <input type="password" name="password_conf" placeholder="Confirm Password" class="form-control"/>
+            </div><br/>
+            <input type="submit" value="Sign Up" class="btn btn-primary btn-block"/>
+          </form>
+        </div>
+      </div>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
