--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -10,12 +10,16 @@
 
       <% include ../static/partials/navbar.ejs %>
 
-      <h1>Wikis</h1>
-
-      <% if(currentUser) { %>
-        <a href="/wikis/new" class="btn btn-success">New Wiki</a>
-      <% } %>
-
+      <div class="row">
+        <div class="col-10 align-self-center">
+          <h1>Wikis</h1>
+        </div>
+        <div class="col-2 align-self-center">
+          <% if(currentUser) { %>
+            <a href="/wikis/new" class="btn btn-success btn-block">New Wiki</a>
+          <% } %>
+        </div>
+      </div>
       <ul class="list-group">
         <% wikis.forEach((wiki) => { %>
           <% if (wiki.private == false) { %>
